guestbook/ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: guestbook-ui
