guestbook/ui-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ui
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: guestbook.dev.corvo.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: guestbook-ui-stable
            port:
              number: 80
